updated 13 with bash solution and minor change to tappinng

--- a/Cryptography/13.md
+++ b/Cryptography/13.md
@@ -21,4 +21,7 @@ A rot13 cipher can be googled to decrypt the text given as given in the hint.
 
 ## Improvement
 
-None
+```console
+alias rot13="tr 'A-Za-z' 'N-ZA-Mn-za-m'"
+echo "cvpbPGS{abg_gbb_onq_bs_n_ceboyrz}" | rot13
+```
